# qpa-v2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  pytest.ini  ruff.toml
data/: analysis_config.json  classes_dataset.csv  classiq_quantum_concepts.csv  classiq_quantum_concepts.json  extended_pattern_list.csv  filtered_repo_list.txt  final_pattern_report.txt  github_search_summary_20260429_221214.txt  github_search_summary_20260501_220431.txt  github_search_summary_20260502_105321.txt  github_search_summary_20260502_115835.txt  github_search_summary_20260502_120539.txt  github_search_summary_20260503_130659.txt  github_search_summary_20260503_132233.txt  github_search_summary_20260503_133051.txt  github_search_summary_20260503_143844.txt  kappa_validation_final.xlsx  original_pattern_list.csv  pattern_descriptions.json  pattern_keywords.json  pattern_keywords_exclusive.json  patterns_used_in_categorization.csv  pennylane_quantum_concepts.csv  pennylane_quantum_concepts.json  qiskit_algorithms_quantum_concepts.csv  qiskit_algorithms_quantum_concepts.json  qiskit_machine_learning_ground_truth.csv  qiskit_machine_learning_quantum_concepts.json  qiskit_quantum_concepts.csv  qiskit_quantum_concepts.json  qrisp_ground_truth.csv  qrisp_ground_truth_full.csv  quantum_concept_matches_with_patterns.csv  quantum_frameworks_structured_20260429_221214.json  quantum_frameworks_structured_20260501_220431.json  quantum_frameworks_structured_20260502_105321.json  quantum_frameworks_structured_20260502_120539.json  quantum_frameworks_structured_20260503_130659.json  quantum_frameworks_structured_20260503_132233.json  quantum_frameworks_structured_20260503_143844.json  (+2 more)
docs/: braket_algorithm_library_coverage.md  braket_precision_recall.md  classiq_concept_taxonomy.md  data_flow_v2.mermaid  diagram1.mermaid  diagram2.mermaid  diagram3.mermaid  diagram3a.mermaid  diagram3b.mermaid  embedding_comparison.md  evaluation_diagnosis.md  experiment.mermaid  experimental_data.md  experimental_data_report.md  experimental_insights.md  extended_pattern_coverage_analysis.md  extracted_concepts_summary.md  final_pattern_report.md  identifier_normalization_comparison.md  iterative_expansion_report.md  kappa_validation_guide.md  language_survey.md  overall_flow.mermaid  parked_ideas.md  precision_recall_braket_and_qiskit_ml.md  qiskit_algorithms_impact_analysis.md  qiskit_finance_precision_recall.md  qiskit_ml_precision_recall.md  qrisp_precision_recall.md  qualtran_precision_recall.md  quantum_algorithm_compositions.md  quantum_patterns_report.md  quantum_primitives_mindmap.md  research_plan.md
(+318 files in other folders)
