[project]
name = "qpa"
version = "0.1.0"
description = "Quantum Patterns Analyser: Automated framework for mining and analyzing recurring software patterns across quantum computing libraries."
requires-python = ">=3.12"

dependencies = [
    "openai>=1.82.0",
    "anthropic>=0.52.0",
    "beautifulsoup4>=4.13.4",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "pandas>=2.3.0",
    "sqlalchemy>=2.0.41",
    "astunparse>=1.6.3",
    "tqdm>=4.67.1",
    "notebook>=7.4.0",
    "nbconvert>=7.16.0",
    "transformers>=4.52.4",
    "torch>=2.7.0",
    "sentence-transformers>=4.1.0",
    "scikit-learn>=1.6.1",
    "huggingface-hub>=0.32.3",
    "requests>=2.32.3",
    "nbformat>=5.9.0",
    "PyGithub>=2.8.1",
    "classiq>=0.94.2",
    "markdown>=3.7.0",
    "weasyprint>=62.0",
    "pdfkit>=1.0.0",
    "prefect>=3.4.0",
    "tree-sitter>=0.22",
    "tree-sitter-cpp>=0.22",
    "chromadb>=0.6.0",
    "openpyxl>=3.1.5",
    "bibtexparser>=1.4.0",
    "together>=1.0.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pandas-stubs>=2.2.3",
    "rich>=14.0.0",
    "black",
    "ruff",
    "pytest",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "coverage>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]
workflow = [
    "prefect>=3.4.0",
    "prefect-sqlalchemy>=0.5.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | htmlcov
  | \.pytest_cache
  | \.ruff_cache
  # generated code folders
  | notebooks
  | converted_notebooks
  | target_github_projects
  | data
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "htmlcov",
    ".pytest_cache",
    ".ruff_cache",
    # generated code folders
    "notebooks",
    "converted_notebooks", 
    "target_github_projects",
    "data",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
